# EmuManager

./: .gitignore  README.md  arbo.txt  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  main.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: azahar_controller_writer.rs  config_store.rs  controller_profile_writer.rs  controller_profiles.rs  debug_log.rs  dolphin_controller_writer.rs  eden_controller_writer.rs  emulator_configurator.rs  emulator_installer.rs  emulator_registry.rs  emulator_resources.rs  game_launcher.rs  graphics_profile_writer.rs  graphics_profiles.rs  local_library.rs  main.rs  manual_import.rs  melonds_controller_writer.rs  pcsx2_controller_writer.rs  platform_router.rs  portable_paths.rs  process_launcher.rs  rom_downloader.rs  romm_library_cache.rs  romm_media_cache.rs  romm_sync.rs  self_update.rs
src/components/: CollapsiblePanel.tsx  ControllerMappingPanel.tsx  DebugWindow.tsx  GraphicsSettingsPanel.tsx  LibraryPanel.tsx  NotificationOverlay.tsx  RommConnectionCard.tsx  WindowTitlebar.tsx
src/lib/: debugLog.ts  portableConfig.ts  romm.ts
