[package]
name = "emumanager"
version = "0.1.0"
description = "EmuManager"
authors = ["Tilio"]
license = "Proprietary"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sevenz-rust = "0.6.1"
tauri = { version = "2.10.3", features = [] }
tokio = { version = "1", features = ["fs", "io-util"] }

[features]
default = []