[package]
name = "emumanager"
version = "0.1.0"
description = "EmuManager"
authors = ["Sahhperlipopette"]
license = "Proprietary"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sevenz-rust = "0.6"
tauri = { version = "2.0.0", features = [] }
tokio = { version = "1", features = ["fs", "io-util"] }
toml_edit = "0.25"
zip = { version = "2", default-features = false, features = ["deflate"] }

[features]
default = []
